# project_template

./: README.md
api/: Dockerfile  Makefile  pyproject.toml  run.sh
api/src/: app.py
db/: .env  Dockerfile  Makefile
ds_core/conf/base/: logging.yml
ds_core/docs/source/: conf.py
ds_core/src/: setup.py
ds_core/src/ds_core/: __init__.py  __main__.py  settings.py
ds_core/src/tests/: test_run.py
front/: Dockerfile
kedro/ds-core/: README.md  pyproject.toml
kedro/ds-core/docs/source/: index.rst
