[tool.poetry]
name = "api-app"
version = "0.1.0"
description = "API rest for general purposes"
authors = ["Jose Matamoros"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"